# PCA_Chatbot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Experimentation.ipynb  Makefile  README.md  Vector_Store.ipynb  changelog.md  difficulty_guide.json  eval_metrics.ipynb  example.gitlab-ci.yml  pyproject.toml  sessions.db  sonar-project.properties
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json  .temp-deepeval-cache.json  .temp_test_run_data.json
.gitlab/merge_request_templates/: default.md
app/: main.py
app/agents/pca_agent/: __init__.py  agent.py  prompts.py
app/commons/: core.py  decorators.py  settings.py  utils.py
app/src/vectorstore/: hybrid_vector_store.py
app/tools/: tools.py
artifacts/eval_metrics/datasets/deepseek-r1_latest/: test_cases_dataset.json
artifacts/eval_metrics/deepseek-r1/: results_deepeval.json  test_cases_mapeados.json
artifacts/eval_metrics/gpt-oss/: results_deepeval.json  test_cases_mapeados.json
artifacts/eval_metrics/llama3/: results_deepeval.json  test_cases_mapeados.json
data/ground_truth/: ground_truth_mlops.csv
data/raw/: What is MLOps.txt
src/config/: settings.py
src/evaluation/: deepeval_dataset.py  deepeval_evaluation.py
src/loaders/: pdf_loader.py  txt_loader.py
src/pipelines/: evaluation_pipeline.py  ingest_pipeline.py  query_pipeline.py  rag_pipeline.py
src/utils/: logger.py  text_cleaning.py
src/vectorstore/: hybrid_vector_store.py
terraform/: backend-dev.hcl  backend-prd.hcl  iam.tf  providers.tf  secret.tf  tsuru.tf  variables.tf
(+15 files in other folders)
